--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html, body {
 h1{
   color: #A6CE39;
   margin-bottom: 30px;
-  font-size: 5em;
+  font-size: 2em;
   font-weight: 700;
   font-family: 'Roboto Condensed', sans-serif;
 }
@@ -86,25 +86,16 @@ ul.nav li a,
   text-transform: uppercase;
 }
 
-.dates{
-  width: 330px;
-  height: 150px;
-  margin: 0 auto;
-}
-
 .date{
    padding: 15px;
    box-shadow: 3px 3px 5px #888;
    width: 150px;
    height: 150px;
-   text-align: center;
-   float: left;
-  
-   border: 1px solid #eee;
-}
-
-.date:last-of-type{
-   margin-left: 15px;
+   text-align: center;   
+   clear: both;
+   border: 1px solid #eee;   
+   margin: 0 auto;
+   margin-bottom: 15px;
 }
 
 .date .day{
@@ -144,7 +135,8 @@ ul.nav li a,
 
 #when {
   background-color: #FFF;
-  height: 300px;
+  min-height: 300px;
+  height: auto;
   position: relative;
 }
 
@@ -206,6 +198,10 @@ ul.nav li a,
   color: #FFF;
 }
 
+#who table{
+  font-size: 12px;
+}
+
 #sponsors{
   padding-bottom: 20px;
 }
@@ -231,4 +227,23 @@ footer .glyphicon {
 }
 footer .glyphicon:hover {
   color: #306d9f;
+}
+
+@media (min-width: 768px) {
+  h1{
+    font-size: 5em;
+  }
+
+  .date.first-date{
+    float: right;
+  }
+  
+  .date.second-date{
+    float: left;    
+  }
+
+  #who table{
+   font-size: 18px;
+  }
+
 }
